design: fix css issues

--- a/assets/styles/frontend/common/components/box/filter.less
+++ b/assets/styles/frontend/common/components/box/filter.less
@@ -85,12 +85,10 @@
     }
 
     &__choice {
-        margin-bottom: -1px;
-
-        border-bottom: 1px solid @box-filter-choice-border-color;
+        border-top: 1px solid @box-filter-choice-border-color;
 
         &--without-border {
-            border-bottom: 0;
+            border-top: 0;
         }
 
         &__title {
@@ -127,7 +125,7 @@
             padding: 0 @box-filter-padding;
 
             &__more {
-                margin-bottom: 15px;
+                padding-bottom: 15px;
 
                 cursor: pointer;
                 text-decoration: underline;
