--- a/assets/styles/frontend/common/core/form/input.less
+++ b/assets/styles/frontend/common/core/form/input.less
@@ -75,6 +75,10 @@
     font-size: @input-font-size-label;
     font-family: @font-alt;
     color: @color-primary;
+
+    &--checkbox {
+        left: 0;
+    }
 }
 
 .input-no-style {
