--- a/assets/styles/frontend/common/main.less
+++ b/assets/styles/frontend/common/main.less
@@ -127,6 +127,7 @@
 //// window
 @import "components/window/bar.less";
 @import "components/window/popup.less";
+@import "components/window/watch-dog.less";
 
 //// box
 @import "components/box/articles.less";
