--- a/templates/Front/Content/Product/filterFormMacro.html.twig
+++ b/templates/Front/Content/Product/filterFormMacro.html.twig
@@ -18,7 +18,7 @@
 
         {{ selectedFilterBox.filterBox(filterForm, resetUrl, filterFormSubmitted) }}
         <div class="box-filter__bottom">
-            <div class="box-filter__choice">
+            <div class="box-filter__choice box-filter__choice--without-border">
                 <div class="box-filter__choice__title js-responsive-toggle open" data-element="filter-price">
                     {{ 'Cena'|trans }}
                     <i class="svg svg-triangle"></i>
