--- a/templates/Front/Content/ReasonsToBuy/index.html.twig
+++ b/templates/Front/Content/ReasonsToBuy/index.html.twig
@@ -10,7 +10,7 @@
                     {% include 'Front/Svg/delivery.svg' %}
                 </div>
                 <p class="list-reasons-to-buy__item__text">
-                    {{ 'Doprava ZDARMA od<br> 1 000 Kč'|trans|raw }}
+                    {{ 'Doprava při nákupu nad 1000 Kč zdarma'|trans }}
                 </p>
             </li>
             <li class="list-reasons-to-buy__item">
@@ -18,7 +18,7 @@
                     {% include 'Front/Svg/heart.svg' %}
                 </div>
                 <p class="list-reasons-to-buy__item__text">
-                    {{ 'Rybářům pomáháme od<br> roku 2000'|trans|raw }}
+                    {{ 'Založeno 2000 - tradice prodeje již 20 let'|trans }}
                 </p>
             </li>
             <li class="list-reasons-to-buy__item">
@@ -26,7 +26,7 @@
                     {% include 'Front/Svg/purse.svg' %}
                 </div>
                 <p class="list-reasons-to-buy__item__text">
-                    {{ 'Garance nejvýhodnější cenové nabídky'|trans }}
+                    {{ 'Možnost nákupu na splátky'|trans }}
                 </p>
             </li>
             <li class="list-reasons-to-buy__item">
@@ -34,9 +34,7 @@
                     {% include 'Front/Svg/address.svg' %}
                 </div>
                 <p class="list-reasons-to-buy__item__text">
-                    {{ 'Moderní'|trans }}
-                    <a class="list-reasons-to-buy__item__text__link js-not-implemented-yet" href="">{{ 'prodejna v centru'|trans }}</a>
-                    {{ 'Liberce'|trans }}
+                    {{ 'Možnost vrácení zboží do 30 dnů'|trans }}
                 </p>
             </li>
             <li class="list-reasons-to-buy__item">
@@ -44,9 +42,7 @@
                     {% include 'Front/Svg/box.svg' %}
                 </div>
                 <p class="list-reasons-to-buy__item__text">
-                    {{ 'Každý týden'|trans }}
-                    <a class="list-reasons-to-buy__item__text__link js-not-implemented-yet" href="">{{ 'nová nabídka'|trans }}<br></a>
-                    {{ 'za výhodné ceny'|trans }}
+                    {{ 'Nejširší sortiment - v nabídce více než 100 000 produktů'|trans }}
                 </p>
             </li>
             <li class="list-reasons-to-buy__item">
@@ -54,8 +50,7 @@
                     {% include 'Front/Svg/like.svg' %}
                 </div>
                 <p class="list-reasons-to-buy__item__text">
-                    {{ 'Rybařině rozumíme. V týmu je i'|trans }}
-                    <a class="list-reasons-to-buy__item__text__link js-not-implemented-yet" href="">{{ 'mistr světa'|trans }}</a>
+                    {{ 'Rybařině rozumíme - v teamu je i mistr světa'|trans }}
                 </p>
             </li>
         </ul>
