--- a/templates/Front/Content/WatchDog/watchDogLink.html.twig
+++ b/templates/Front/Content/WatchDog/watchDogLink.html.twig
@@ -1,7 +1,12 @@
 <a class="box-detail__watch-dog js-watch-dog-window-opener" data-url="{{ url('front_watch_dog_window_form', {'productId': product.Id}) }}">
-    {% if product.calculatedSellingDenied %}
-        {{ 'Hlídat dostupnost a cenu'|trans }}
-    {% else %}
-        {{ 'Hlídat cenu'|trans }}
-    {% endif %}
+    <span class="box-detail__watch-dog__icon">
+        {% include 'Front/Svg/tick.svg' %}
+    </span>
+    <span class="box-detail__watch-dog__text">
+        {% if product.calculatedSellingDenied %}
+            {{ 'Hlídat dostupnost a cenu'|trans }}
+        {% else %}
+            {{ 'Hlídat cenu'|trans }}
+        {% endif %}
+    </span>
 </a>
