--- a/assets/styles/frontend/common/components/box/detail.less
+++ b/assets/styles/frontend/common/components/box/detail.less
@@ -293,17 +293,27 @@
     }
 
     &__watch-dog {
-        display: block;
+        display: flex;
         width: 100%;
         margin-top: 20px;
         text-align: center;
-        line-height: 19px;
+        justify-content: center;
 
-        font-size: @font-size-extra-small;
-        font-weight: 400;
-        text-transform: uppercase;
-        text-decoration: underline;
-        color: @color-base;
+        &__icon {
+            margin-right: 10px;
+
+            font-size: 0;
+        }
+
+        &__text {
+            line-height: 19px;
+
+            font-size: @font-size-extra-small;
+            font-weight: 400;
+            text-transform: uppercase;
+            text-decoration: underline;
+            color: @color-base;
+        }
     }
 
     &__catnumber {
