--- a/templates/Front/Content/WatchDog/windowForm.html.twig
+++ b/templates/Front/Content/WatchDog/windowForm.html.twig
@@ -1,14 +1,42 @@
-<h2 class="js-watch-dog-heading">{{ product.name }}</h2>
-{{ 'Vložte svůj e-mail a my Vás informujeme o snížení ceny nebo o naskladnění zboží:'|trans }}
-{{ form_start(form) }}
-    {{ form_row(form.email) }}
-    {% if product.calculatedSellingDenied %}
-        {{ form_row(form.availabilityWatcher) }}
-    {% endif %}
-    {{ form_row(form.priceWatcher) }}
-    <div class="js-target-price-input-line">
-        {{ form_row(form.targetPrice) }} {{ currencySymbolByDomainId(getDomain().id) }}
+<div class="window-watch-dog">
+    <h3 class="window-watch-dog__title js-watch-dog-heading">{{ product.name }}</h3>
+    
+    <div class="window-watch-dog__row">
+        <div class="window-watch-dog__item window-watch-dog__item--full-width">
+            {{ 'Vložte svůj e-mail a my Vás informujeme o snížení ceny nebo o naskladnění zboží:'|trans }}
+        </div>
     </div>
-    {{ form_row(form.submit, {attr: {class: 'js-watch-dog-submit'}}) }}
-{{ form_end(form) }}
-{{ init_js_validation(form, false) }}
+
+    {{ form_start(form) }}
+        <div class="window-watch-dog__row">
+            <div class="window-watch-dog__item">
+                {{ form_row(form.email, { rowClass: 'form-line--without-gap' }) }}
+            </div>
+            <div class="window-watch-dog__item">
+                <div class="window-watch-dog__target-price js-target-price-input-line">
+                    <div class="window-watch-dog__target-price__input">
+                        {{ form_row(form.targetPrice, { rowClass: 'form-line--without-gap' }) }}
+                    </div>
+                    <div class="window-watch-dog__target-price__currency">
+                        {{ currencySymbolByDomainId(getDomain().id) }}
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="window-watch-dog__row">
+            {% if product.calculatedSellingDenied %}
+                <div class="window-watch-dog__item">
+                    {{ form_row(form.availabilityWatcher, { rowClass: 'form-line--without-gap' }) }}
+                </div>
+            {% endif %}
+            
+            <div class="window-watch-dog__item">
+                {{ form_row(form.priceWatcher, { rowClass: 'form-line--without-gap' }) }}
+            </div>
+        </div>
+
+        {{ form_row(form.submit, {attr: {class: 'btn--big js-watch-dog-submit'}}) }}
+    {{ form_end(form) }}
+    {{ init_js_validation(form, false) }}
+</div>
