--- a/assets/styles/frontend/common/components/box/gallery.less
+++ b/assets/styles/frontend/common/components/box/gallery.less
@@ -102,6 +102,14 @@
             }
         }
 
+        &--without-border {
+            margin-left: 0;
+            
+            &:before {
+                display: none;
+            }
+        }
+
         &__link {
             position: relative;
             display: inline-block;
