--- a/templates/Admin/Content/MergadoFeed/feed.xml.twig
+++ b/templates/Admin/Content/MergadoFeed/feed.xml.twig
@@ -78,6 +78,7 @@
         {% if item.warranty is not null -%}
             <WARRANTY>{{ item.warranty }}</WARRANTY>
         {% endif -%}
+        <CUSTOM_LABEL_0>{{ item.purchaseVsSellingPriceDifference }}</CUSTOM_LABEL_0>
     </ITEM>
 {% endblock %}
 
