--- a/templates/Admin/Content/MergadoFeed/feed.xml.twig
+++ b/templates/Admin/Content/MergadoFeed/feed.xml.twig
@@ -79,6 +79,9 @@
             <WARRANTY>{{ item.warranty }}</WARRANTY>
         {% endif -%}
         <CUSTOM_LABEL_0>{{ item.purchaseVsSellingPriceDifference }}</CUSTOM_LABEL_0>
+        {% if item.saleExclusionType is not null %}
+            <CUSTOM_LABEL_1>{{ item.saleExclusionType }}</CUSTOM_LABEL_1>
+        {% endif %}
     </ITEM>
 {% endblock %}
 
