OrderPreview::$totalDiscount renamed to orderDiscountLevelTotalDiscount
- it really contains the discount for the order level

--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -117,7 +117,7 @@
                                 {{ 'Sleva %percent%'|trans({'%percent%': orderPreview.activeOrderDiscountLevel.discountPercent|formatPercent}) }}
                             </td>
                             <td class="table-cart-preview__cell table-cart-preview__cell--price  table-cart-preview__cell--important">
-                                -&nbsp;{{ orderPreview.totalDiscount.priceWithVat|price }}
+                                    -&nbsp;{{ orderPreview.orderDiscountLevelTotalDiscount.priceWithVat|price }}
                             </td>
                         </tr>
                     {% endif %}
