order preview: display total discount
- total discount is a sum of promo code discounts, order level discount, and registration discount
- gift certificate value is not included in the sum

--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -180,7 +180,9 @@
             <div id="js-order-preview-total-price" class="table-cart-preview table-cart-preview--without-gap">
                 <div class="table-cart-preview__total">
                     {% if orderPreview.activeOrderDiscountLevel is not null or promocodeActive %}
-                        <span class="table-cart-preview__total__discount js-not-implemented-yet">Ušetříte 3 175 Kč</span>
+                        <span class="table-cart-preview__total__discount ">
+                            {{ 'Ušetříte %price%'|trans({ '%price%': orderPreview.totalDiscount|price }) }}
+                        </span>
                     {% endif %}
                     <span class="table-cart-preview__total__price-primary {% if orderPreview.activeOrderDiscountLevel is not null or promocodeActive %}table-cart-preview__total__price-primary--colored{% endif %}">
                         {{ orderPreview.totalPrice.priceWithVat|price }}
