--- a/templates/Front/Content/Product/productGalleryImagesMacro.html.twig
+++ b/templates/Front/Content/Product/productGalleryImagesMacro.html.twig
@@ -1,4 +1,4 @@
-{% macro loadGalleryImages(galleryImages, showGalleryMaxCount, youtubeDetails, type) %}
+{% macro loadGalleryImages(product, galleryImages, showGalleryMaxCount, youtubeDetails, type) %}
     {% if type is same as('productSetGallery') %}
         <div class="box-gallery dont-print js-gallery">
             <div class="box-gallery__images">
